force-app/main/default/objects/Inactive_Contact_Config__mdt/Inactive_Contact_Config__mdt.object-meta.xml
<CustomObject>
    <label>Inactive Contact Config</label>
    <pluralLabel>Inactive Contact Configs</pluralLabel>
</CustomObject>