force-app/main/default/objects/Inactive_Contact_Config__mdt/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>