force-app/main/default/objects/Inactive_Contact_Config__mdt/fields/Days_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_Threshold__c</fullName>
    <label>Days Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>